2004-06-29  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/if_cs8900a.c: Added missing include of cyg_ass.h.

2004-05-07  Bob Koninckx <bob.koninckx@o-3s.com>
	* src/if_cs8900a.c: Drop "ghost" frames with zero length

2004-04-19  Bob Koninckx <bob.koninckx@o-3s.com>
	* src/if_cs8900a.c: function cs8900a_int_vector, return the vector
	instead of a boolean.

2004-04-08  Bob Koninckx <bob.koninckx@o-3s.com>
	* cdl/cl_cs8900a_eth_drivers.cdl
	* include/if_cs8900a.c
	* src/if_cs8900a.c: Made hardware swapping or software swapping of
    data bytes (mostly relevant to big endian machines) a configuration
    option

2003-11-05  Bob Koninckx <bob.koninckx@mech.kuleuven.ac.be>

	* src/if_cs8900a.c: Fix handling of odd bytes on big endian machines

2003-04-12  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/if_cs8900a.c (cs8900a_send): Allow for data not being 16-bit
	aligned. Thanks to Laurent Gonzalez <laurent.gonzalez@ri.silicomp.fr>
	for reporting this and his initial patch.

2003-03-03  Bob Koninckx  <bob.koninckx@mech.kuleuven.ac.be>
	
	* src/if_cs8900a.c:
	* include/cs8900a.h:
	Changes to support both little and big endian targets

2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_cs8900a.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2002-05-30  Jonathan Larmour  <jlarmour@redhat.com>

	* include/cs8900.h: Check for lost ints if we can - when kernel present.
	* src/if_cs8900a.c: Use CYGINT_IO_ETH_INT_SUPPORT_REQUIRED where
	appropriate.

2002-03-20  Gary Thomas  <gthomas@redhat.com>
2002-03-06  Pieter Truter <ptruter@intrinsyc.com>

	* src/if_cs8900a.c (cs8900a_isr): Need to acknowledge interrupt
	here (in case DSR/poll causes a new one to occur).	

2002-02-18  Gary Thomas  <gthomas@redhat.com>

	* cdl/cl_cs8900a_eth_drivers.cdl: 
	Add new interface CYGINT_IO_ETH_MULTICAST which is used to
	insure that drivers support multicast addresses if IPv6 is used.
